--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog-POST</title>
+    <title>Create Post</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -34,38 +33,26 @@
           </nav>
     </header>
     <main>
-      <div class="post-blogs">
-        <a href="http://localhost:3000/posts">Create a Post <i class="fa-regular fa-paper-plane"></i></a>
-      </div>
-
-
-
-        <% for(post of posts) { %>
-          <div class="blog-post">
-            <div class="top-content">
-                <div class="profile">
-                    <img src="https://marketplace.canva.com/EAFXS8-cvyQ/1/0/1600w/canva-brown-and-light-brown%2C-circle-framed-instagram-profile-picture-2PE9qJLmPac.jpg" alt="#">
-                </div>
-                <div class="profile-info">
-                    <a href="#"><%= post.username %></a>
-                    <span>(1hr)</span>
-                </div>
+    <div class="content">
+        <form method="post" action="/posts">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Enter Name</label>
+              <input type="text" class="form-control" id="exampleInputEmail1" name="username" placeholder="Enter Name">  
             </div>
-            <div class="post-content">
-                <p><%= post.content %></p>
-                <span><a href="#">See Detail</a></span>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Enter Content</label>
+              <input type="text" class="form-control" name="content"  placeholder="Enter Content">
             </div>
-            <div class="bottom-options">
-                <div class="edit-btn">
-                    <button>Edit</button>
-                </div>
-                <div class="delete-btn">
-                    <button>Delete</button>
-                </div>
-            </div>
-        </div>
-        <% } %>
+            <br>
+            <div class="form-group">
+                <label for="profile">Add profile Photo</label>
+                <input type="file" class="form-control-file" id="profile" name="profile">
+              </div>
+              <br>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+    </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
