--- a/public/style.css
+++ b/public/style.css
@@ -35,8 +35,8 @@
 .post-content p{
     background-color: rgb(22, 22, 22);
     padding: 5px;
-    font-weight: 500;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 200;
+    font-family: system-ui;
 }
 .bottom-options{
     width: 80%;
@@ -93,3 +93,69 @@
 .post-content span a:hover{
     color: rgb(255, 255, 255);
 }
+.content{
+   width: 80%;
+   margin: auto;
+   margin-top: 50px;
+   background-color: rgb(255, 255, 255);
+   padding: 10px;
+}
+.post-blogs{
+    margin: auto;
+    color: black;
+    border: 1px solid black;
+    height: 50px;
+    width: 160px;
+    text-align: center;
+    padding: 10px;
+    text-transform: capitalize;
+    cursor: pointer;
+
+  }
+  .post-blogs a{
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+    text-decoration: none;
+
+  }
+  .post-blogs a:hover{
+    color: rgb(43, 156, 255);
+    font-weight: 700;
+    text-decoration: none;
+
+  }
+  .post-blogs i:hover{
+    color: brown;
+  }
+
+@media only screen and (max-width: 600px) {
+    .blog-post{
+        width: 80%;
+        height: 400px;
+        background-color: rgb(13, 13, 13);
+        margin: auto;
+        margin-top: 30px;
+        border-radius: 10px;
+    }
+    .bottom-options{
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        height: 50px;
+        background-color: rgb(34, 34, 34);
+        margin-top: 100px;
+        border-radius: 20px;
+    }
+    .post-blogs{
+        margin-top: 20px;
+        color: black;
+        border: 1px solid black;
+        height: 50px;
+        width: 160px;
+        text-align: center;
+        padding: 10px;
+        text-transform: capitalize;
+        cursor: pointer;
+    
+      }
+  }
